missing parenthesis added

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9289,7 +9289,7 @@ and large libraries have been formalized in TPTP.
 The underlying logic is unsorted first-order logic. In 
 \cite{GoguenBurstall92}, many-sorted first has been formalized as
 an institution; the single-sorted sublogic (using only a fixed
-set of sorts $\{s\}$ is isomorphic to unsorted first-order logic.
+set of sorts $\{s\}$ is isomorphic to unsorted first-order logic).
 
 \infannex{Conformance of CASL with \DOL}\label{a:casl}
 
