Conrad's comments about compositions in UML class diagrams

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8701,9 +8701,12 @@ Let $(C, {\leq_C})$ be a class/data type hierarchy.
  both are of class \uml{Property} (\cite[p.~109]{uml-2.5}).} over $(C, {\leq_C})$ is of the form
 $c.p : \tau[c']$ with $c, c' \in C$, $\tau$ a collection type
 constructor, and $p$ an \emph{attribute name}. Additionally, an attribute may be \emph{composite} and we write
-+$c\composition p : \tau[c']$ if this fact plays a rôle. ({Attributes
+$c\composition p : \tau[c']$ if this fact plays a rôle. (Attributes
   and association member ends are distinguished due to their different uses.  In UML,
-  both are of class \uml{Property}.}) 
+  both are of class \uml{Property}. Hence, attribute 
+declarations are a kind of \emph{property declarations}. Another
+kind of property declaration will be introduced through member end
+declarations below.) 
 
   \item A \emph{query operation declaration} over $(C, {\leq_C})$ is of
 the form $c.q(x_1 : \tau_1[c_1], \dots, x_r : \tau_r[c_r]) : \tau[c']$
@@ -8740,21 +8743,9 @@ $\mathbf{m} = m(p_1 : \mathsf{Set}[c_1], \composition p_2 :
 \emph{yields} the property declarations
 $\mathbf{m}.p_1 : \mathsf{Set}[c_1]$ and $\mathbf{m}.p_2 : \tau_2[c_2]$.
 \end{itemize}
-{In UML, each \uml{Property} may have
-  \uml{AggregationKind} \uml{composite}.  However, such an aggregation
-  kind has no semantic meaning when the property is not a member end of
-  an association: the UML Superstructure Specification 2.4.1 does not
-  mention the aggregation kind in the description of the semantics of
-  \uml{Property}, and UML 2.5 explains the use of aggregations for
-  \uml{Property} as ``to model circumstances in which \emph{one
-    instance} is used to group together a set of instances'' (p.~112,
-  our emphasis).  Moreover, composite properties, i.e., properties with
-  aggregation kind \uml{composite} can only be member ends of binary
-  associations (UML Superstructure Specification 2.4.1, p.~37; UML 2.5,
-  p.~228) and their multiplicity must not exceed one (UML Superstructure
-  Specification 2.4.1, p.~126; UML 2.5, p.~155).  Thus, 
-  composition declarations are  distinguished from general association declarations.}
 
+\ednote{define a composition declaration as an association declaration
+that has a composite property}
 
 \medskip\noindent\textbf{Class/data type nets (Signatures).}
 A \emph{class/data type net} $\Sigma = ((C, {\leq_C}), P, O, A, M)$
