addressed Mihai's todos that he introduced answering Ed

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -68,8 +68,8 @@
 
 \usepackage{pdflscape}
 
-%\usepackage[show]{ed}
-\usepackage[hide]{ed}
+\usepackage[show]{ed}
+%\usepackage[hide]{ed}
 
 %color highlight, for editing
 \usepackage{color}
@@ -6648,7 +6648,9 @@ The semantics for an \syntax{ExtendingOMS} has been defined above.
 
 If $o$ is a \syntax{ClosureOMS},
 $$sem(\Gamma, o) = (I,\Sigma,\cM',\bot)$$
-where \todonote{didn't look at this} \todonote{free, cofree, maximize are missing, see \syntax{MinType}} \ednote{what is $sem(\syntax{CircVars},\Sigma)$?}
+where \todonote{didn't look at this} \todonote{free, cofree, maximize are missing, see \syntax{MinType}. TM: I do not understand, they are there!} \ednote{what is $sem(\syntax{CircVars},\Sigma)$? TM: CircVars is a set of symbols, and $sem(CircVars,\Sigma)$ is just the subsignature of $\Sigma$ induced by CircVars. I think this is the same as in the subsubsection ``Semantics of sets of symbols'', just the notation needs to be adapted to that section. (By the way: could we remove the global env $\Gamma$ from the semantics of sets of symbols? I think it is not needed.)
+Moreover, $\Sigma_{min}$ can be replaced with $\Sigma$, and then the equation involving ClosureType disappears.
+}
 \begin{align*}
 (I,\Sigma,\cM,\Delta) &= sem(\Gamma, o.\syntax{oms}),  & \Sigma_{\mathit{min}} &=sem(o.\syntax{closure}.\syntax{closureType},\Sigma), \\
 \Sigma_{\mathit{var}} & = sem(o.\syntax{closure}.\syntax{CircVars},\Sigma),
@@ -6958,7 +6960,8 @@ sem(\Gamma,\Sigma,s_n)$, if such a sub-signature exists and is otherwise undefin
 
 %%%%%%%%%%%%%%%%%%%%%%%
 
-\todonote{I need equations for one signature and for two signatures... TM: what do you want to say here?}
+\todonote{I need equations for one signature and for two signatures... TM: what do you want to say here? TM: we could try to introduce the same machinery
+as in the CASL reference manual. Or we could make this institution-specific.}
 
 \sssclause{Semantics of symbol maps}
 
@@ -7236,7 +7239,7 @@ unique default institution comorphism from the heterogeneous logical
 environment running from $\Gamma.logic$ to $t.\syntax{languageRef}$ (if this is a
 logic) or to some logic supported by $t.\syntax{languageRef}$ (if this
 is a language). If there is no or no unique such comorphism, the
-semantics is undefined. \ednote{@Till: please check this}
+semantics is undefined. \ednote{@Till: please check this. TM: sounds good.}
 
 \ssclause{Semantics of OMS Mappings}\label{sec:oms-mappings}
 
@@ -9521,7 +9524,7 @@ UML\mbox{-}CD & \CL & \CL & $\bot$ & UML\mbox{-}CD & \CL\\
 
 
 The other assumptions on the logics in the heterogeneous logical environment hold in
-the expected way.\ednote{@Till: rephrase if need be}
+the expected way.\ednote{@Till: rephrase if need be. TM: I think it is OK, even if quite vague.}
 
 \sclause{Serializations}
 
